# metric-disagreement-speech

./: .gitignore  00_RATIONALE.md  LITERATURE_REVIEW.md  README.md  REPRODUCIBILITY.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
configs/: smoke.yaml  study.yaml
experiments/: run.sh
paper/: Makefile  README.md  main.tex  references.bib  workshop2027.sty
src/qc_curation/: __init__.py  analyse.py  asr.py  audio.py  cli.py  corrupt.py  metrics.py  prepare.py  select.py  utils.py
